--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,20 @@
                 android:textColor="@color/white"
                 android:textSize="24sp" />
         </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/confirm_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            android:id="@+id/forgot_password"
+            android:text="Forgot password?"
+            android:textSize="16sp"
+            android:textColor="@drawable/text_click_selector"
+            android:padding="4dp"/>
+
     </android.support.constraint.ConstraintLayout>
 
     <ProgressBar
