--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="pink_semi_transparent">#80FF4081</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="black_semi_transparent">#80000000</color>
