--- a/app/src/main/res/drawable/confirm_btn.xml
+++ b/app/src/main/res/drawable/confirm_btn.xml
@@ -7,7 +7,13 @@
             <solid android:color="@color/colorPrimaryDark"/>
         </shape>
     </item>
-
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle"
+            xmlns:android="http://schemas.android.com/apk/res/android">
+            <corners android:radius="16dp"/>
+            <solid android:color="@color/gray"/>
+        </shape>
+    </item>
     <item>
         <shape android:shape="rectangle"
             xmlns:android="http://schemas.android.com/apk/res/android">
