--- a/app/src/main/res/layout/fragment_shopping_item.xml
+++ b/app/src/main/res/layout/fragment_shopping_item.xml
@@ -27,8 +27,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="36dp"
         android:ems="10"
+        android:maxLength="30"
         android:hint="@string/title"
         android:inputType="text"
+        android:imeOptions="actionNext"
+        android:nextFocusDown="@id/subtitle"
         android:textColorHint="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +46,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="36dp"
         android:ems="10"
+        android:maxLength="60"
+        android:imeOptions="actionDone"
         android:hint="@string/description"
         android:inputType="text"
         android:textColorHint="@color/colorPrimaryDark"
@@ -73,6 +78,107 @@
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="24sp" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/black_semi_transparent"
+        android:id="@+id/modal_frame">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/login_modal_msg_bg"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:text="How to load image?"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <FrameLayout
+                android:id="@+id/camera_btn"
+                android:layout_width="0dp"
+                android:layout_height="56dp"
+                android:layout_marginEnd="56dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/confirm_btn"
+                app:layout_constraintTop_toBottomOf="@id/title1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Camera"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/gallery_btn"
+                android:layout_width="0dp"
+                android:layout_height="56dp"
+                android:layout_marginEnd="56dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/confirm_btn"
+                app:layout_constraintTop_toBottomOf="@id/camera_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Gallery"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/cancel_btn"
+                android:layout_width="0dp"
+                android:layout_height="56dp"
+                android:layout_marginEnd="56dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/confirm_btn"
+                app:layout_constraintTop_toBottomOf="@id/gallery_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Cancel"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+            </FrameLayout>
+
+        </android.support.constraint.ConstraintLayout>
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
