--- a/app/src/main/res/layout/fragment_shopping_item.xml
+++ b/app/src/main/res/layout/fragment_shopping_item.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -94,6 +95,16 @@
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:id="@+id/back_btn"
+        android:src="?attr/homeAsUpIndicator"/>
 
     <FrameLayout
         android:layout_width="match_parent"
