--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="black_semi_transparent">#80000000</color>
     <color name="dialog_background">#F3F3F3</color>
     <color name="gray">#C8C8C8</color>
+    <color name="gray_semi_transparent">#80C8C8C8</color>
 </resources>
