--- a/app/src/main/res/layout/ganre_item.xml
+++ b/app/src/main/res/layout/ganre_item.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="ganre"
+            type="String"/>
+    </data>
+<android.support.constraint.ConstraintLayout
     android:layout_width="wrap_content"
     android:background="@drawable/ganre_bubble"
     android:layout_height="36dp">
@@ -15,7 +21,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="10dp"
-        android:text="Drama"
+        android:text="@{ganre}"
         android:id="@+id/ganre_name"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,3 +29,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
+</layout>
