--- a/app/src/main/res/layout/base_action_bar.xml
+++ b/app/src/main/res/layout/base_action_bar.xml
@@ -5,14 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary">
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
         android:id="@+id/left_container"
         android:layout_width="60dp"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-    </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
@@ -65,7 +65,7 @@
     </android.support.constraint.ConstraintLayout>
 
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
         android:id="@+id/right_container"
         android:layout_width="60dp"
         android:layout_height="match_parent"
@@ -73,6 +73,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
